--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html {
-  background-color: rgba(0, 0, 0, 0.555);
+  background-color: #12a0d8;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: 22px;
   font-weight: 700;
@@ -14,13 +14,14 @@ html {
 
 h1 {
   color: white;
+  margin: 0;
 }
 
 header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0 30px;
+  padding: 0 10px;
 }
 
 button {
@@ -74,10 +75,8 @@ button:hover {
 }
 
 footer {
-  position: fixed;
-  bottom: 0;
+  margin-top: 40px;
   text-align: center;
   color: white;
   font-size: 16px;
-  width: 80%;
 }
