--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 html {
-  background-color: #12a0d8;
+  background-color: #ffffff;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 22px;
+  font-size: 48px;
   font-weight: 700;
 }
 
@@ -13,8 +13,9 @@ html {
 }
 
 h1 {
-  color: white;
+  color: rgb(0, 0, 0);
   margin: 0;
+  font-size: 22px;
 }
 
 header {
@@ -45,7 +46,7 @@ button:hover {
 }
 
 .drag-area {
-  min-height: 200px;
+  min-height: 120px;
   background-color: rgb(50, 50, 50);
   margin: 10px 0px;
   align-items: center;
@@ -58,8 +59,8 @@ button:hover {
 }
 
 .tiles {
-  width: 50px;
-  height: 50px;
+  width: 100px;
+  height: 100px;
   display: flex;
   justify-content: center;
   align-items: center;
