--- a/style.css
+++ b/style.css
@@ -68,11 +68,11 @@ button:hover {
 }
 
 .vowels {
-  background-color: #d9c2c2;
+  background-color: #edc7bc;
 }
 
 .consonants {
-  background-color: #f9ebbb;
+  background-color: #fae79a;
 }
 
 footer {
