--- a/style.css
+++ b/style.css
@@ -1,8 +1,6 @@
 html {
   background-color: #ffffff;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 48px;
-  font-weight: 700;
+  font-family: sans-serif;
 }
 
 @media (min-width: 720px) {
@@ -46,8 +44,8 @@ button:hover {
 }
 
 .drag-area {
-  min-height: 120px;
-  background-color: rgb(50, 50, 50);
+  min-height: 300px;
+  background-color: #ccc;
   margin: 10px 0px;
   align-items: center;
   justify-content: center;
@@ -59,12 +57,23 @@ button:hover {
 }
 
 .tiles {
-  width: 100px;
-  height: 100px;
+  width: 50px;
+  height: 50px;
+  font-family: serif;
+  border-radius: 5%;
+  box-shadow: 2px 1px 3px 0 rgba(0, 0, 0, 0.4);
   display: flex;
+  font-size: 16px;
+  font-weight: 700;
   justify-content: center;
   align-items: center;
   margin: 10px 5px;
+}
+
+.cloned {
+  font-size: 64px;
+  width: 100px;
+  height: 120px;
 }
 
 .vowels {
