--- a/style.css
+++ b/style.css
@@ -1,19 +1,21 @@
 html {
-  background-color: #ffffff;
+  background-color: #82bfe8;
   font-family: sans-serif;
 }
 
 @media (min-width: 720px) {
   body {
     margin-left: 10%;
-    width: 80%;
+    width: 95%;
+    margin: 10px auto;
   }
 }
 
 h1 {
   color: rgb(0, 0, 0);
   margin: 0;
-  font-size: 22px;
+  font-size: 34px;
+  font-family: "Poppins", sans-serif;
 }
 
 header {
@@ -33,6 +35,11 @@ button {
   text-transform: uppercase;
 }
 
+select {
+  width: 120px;
+  height: 40px;
+}
+
 button:hover {
   background-color: #d99e87;
   transition-duration: 0.5s;
@@ -41,19 +48,31 @@ button:hover {
 .tiles:hover {
   transform: translateY(-4px);
   transition-duration: 0.5s;
+  box-sizing: border-box;
+  border: solid red 2px;
 }
 
 .drag-area {
-  min-height: 300px;
+  min-height: 240px;
   background-color: #ccc;
   margin: 10px 0px;
   align-items: center;
   justify-content: center;
+  box-shadow: 10px 10px 10px 0 rgba(0, 0, 0, 0.4);
 }
 
 .flex-container {
   display: flex;
   flex-wrap: wrap;
+}
+
+.board {
+  background-color: white;
+  padding: 20px 20px;
+  box-shadow: 10px 10px 10px 0 rgba(0, 0, 0, 0.4);
+  border-radius: 2px;
+  max-width: 1020px;
+  margin: 0 auto;
 }
 
 .tiles {
@@ -63,16 +82,21 @@ button:hover {
   border-radius: 5%;
   box-shadow: 2px 1px 3px 0 rgba(0, 0, 0, 0.4);
   display: flex;
-  font-size: 16px;
+  font-size: 26px;
   font-weight: 700;
   justify-content: center;
   align-items: center;
   margin: 10px 5px;
 }
 
+.all_tiles {
+  display: flex;
+  justify-content: flex-start;
+}
+
 .cloned {
-  font-size: 64px;
-  width: 100px;
+  font-size: 72px;
+  width: 120px;
   height: 120px;
 }
 
@@ -82,6 +106,21 @@ button:hover {
 
 .consonants {
   background-color: #fae79a;
+}
+
+.glued {
+  background-color: #c1d8ac;
+}
+
+.hidden {
+  background-color: none;
+  box-shadow: none;
+}
+
+.level_1_1 {
+  flex-wrap: wrap;
+  width: 120px;
+  height: 200px;
 }
 
 footer {
