--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ button:hover {
   padding: 20px 20px;
   box-shadow: 10px 10px 10px 0 rgba(0, 0, 0, 0.4);
   border-radius: 2px;
-  max-width: 1020px;
+  max-width: 80vw;
   min-height: 630px;
   flex-basis: 100%;
 }
